# ltp4j

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  aol.properties  appveyor.yml  pom.xml
doc/: api.rst  background.rst  conf.py  index.rst  install.rst  ltp4j-document-1.0.md  run.rst
examples/: Console.java  Test.java
jni/: edu_hit_ir_ltp4j_SRL.h  srl_jni.cpp
ltp_data/: cws.model  ner.model  parser.model  pos.model
src/edu/hit/ir/ltp4j/: SRL.java
src/main/c++/: edu_hit_ir_ltp4j_NER.cpp  edu_hit_ir_ltp4j_Parser.cpp  edu_hit_ir_ltp4j_Postagger.cpp  edu_hit_ir_ltp4j_SDP.cpp  edu_hit_ir_ltp4j_SRL.cpp  edu_hit_ir_ltp4j_Segmentor.cpp  edu_hit_ir_ltp4j_SplitSentence.cpp
src/main/java/edu/hit/ir/ltp4j/: NER.java  Parser.java  Postagger.java  SDP.java  SRL.java  Segmentor.java  SplitSentence.java
src/test/java/edu/hit/ir/ltp4j/test/: NERTest.java  ParserTest.java  PostaggerTest.java  SRLTest.java  SegmentorTest.java
